# serializer version: 1
# name: test_e2e_sample_projects[cmake_vcpkg_project]
  dict({
    'agent': dict({
      'exit_code': 0,
      'model': '',
      'status_messages': list([
        'Exploring repository structure to identify file types and test locations.',
        'Creating devcontainer structure for C++ CMake project with vcpkg dependencies.',
        'Building devcontainer image to verify setup.',
        'Running tests in the built container.',
        'Verifying build reproducibility with second build test.',
      ]),
      'summary': 'All tests passing. Optimized Dockerfile with vcpkg dependency caching and pre-built artifacts results in 0.3s cached rebuilds. Tip: For C++ projects with vcpkg, pre-installing dependencies via vcpkg.json and pre-building the project in Docker layers dramatically speeds up iteration time.',
      'timed_out': False,
    }),
    'error_message': None,
    'success': True,
    'verification': dict({
      'error_message': None,
      'success': True,
      'test_results': list([
        dict({
          'name': 'test_greeter::test_greeter',
          'passed': True,
          'skipped': False,
        }),
      ]),
    }),
  })
# ---
# name: test_e2e_sample_projects[fullstack_project]
  dict({
    'agent': dict({
      'exit_code': 0,
      'model': '',
      'status_messages': list([
        'Exploring repository structure to identify file types and test locations.',
        'Creating .devcontainer directory and copying timestamp helper script.',
        'Creating devcontainer.json configuration file.',
        'Creating Dockerfile with Python and Node.js runtimes for polyglot project.',
        'Creating run_all_tests.sh script to execute both backend and frontend test suites.',
        'Building dev container image to verify configuration.',
        'Build failed due to uv virtual environment issue. Fixing Dockerfile to use proper uv commands.',
        'Retrying dev container build with fixed uv commands.',
        'Running tests in container to verify functionality.',
      ]),
      'summary': 'Successfully built polyglot dev container with Python and Node.js. Both backend (pytest) and frontend (node:test) suites pass. Key tip: This project needed both Python and Node.js runtimes since the frontend tests start the Flask backend server and make API calls to it. Using uv for Python dependencies significantly sped up builds.',
      'timed_out': False,
    }),
    'error_message': None,
    'success': True,
    'verification': dict({
      'error_message': None,
      'success': True,
      'test_results': list([
        dict({
          'name': 'test::add via API',
          'passed': True,
          'skipped': False,
        }),
        dict({
          'name': 'test::multiply via API',
          'passed': True,
          'skipped': False,
        }),
        dict({
          'name': 'server_test::test_server_is_running',
          'passed': True,
          'skipped': False,
        }),
        dict({
          'name': 'test_simple::test_pass',
          'passed': True,
          'skipped': False,
        }),
        dict({
          'name': 'test_simple::test_also_passes',
          'passed': True,
          'skipped': False,
        }),
      ]),
    }),
  })
# ---
# name: test_e2e_sample_projects[python_project]
  dict({
    'agent': dict({
      'exit_code': 0,
      'model': '',
      'status_messages': list([
        'Exploring repository structure to identify file types and test locations.',
        'Creating .devcontainer directory and copying pre-generated files.',
        'Creating Dockerfile with Python 3.11, uv, and pre-cached dependencies.',
        'Creating run_all_tests.sh with pytest execution and JUnit XML reporting.',
        'Building Docker image to verify Dockerfile configuration.',
        'Lockfile needs updating; removing --locked flag from uv sync commands.',
        'Rebuilding Docker image with updated Dockerfile.',
        'Running tests in container to verify setup.',
        'Removing --no-cov flag from pytest command.',
        'Rebuilding image with updated test runner script.',
        'Running tests to verify final setup.',
        'Verifying test artifacts were created correctly.',
        'Verifying final .devcontainer structure.',
        'Running final verification test.',
      ]),
      'summary': 'All tests pass successfully. The setup uses Python 3.11 with uv for fast dependency management. Key tip: Remove the --locked flag from uv sync when the lockfile needs updating, and always use --network=host with docker run in Modal/gVisor environments.',
      'timed_out': False,
    }),
    'error_message': None,
    'generated_files': dict({
      'devcontainer_json': '''
        {
          "build": {
            "dockerfile": "Dockerfile",
            "context": "..",
            "options": [
              "--network=host"
            ]
          },
          "runArgs": [
            "--network=host"
          ]
        }
  
      ''',
      'dockerfile': '''
        # Use Python 3.11 slim image as base
        FROM python:3.11-slim
        
        # Install perl-base for timestamp helper script
        RUN apt-get update && apt-get install -y perl-base && rm -rf /var/lib/apt/lists/*
        
        # Set up timestamp helper script
        COPY .devcontainer/timestamp_process_output.pl /timestamp_process_output.pl
        
        # Create test artifacts directory
        RUN mkdir -p /test_artifacts && chmod 777 /test_artifacts
        
        # Copy uv from official image
        COPY --from=ghcr.io/astral-sh/uv:latest /uv /uvx /bin/
        
        # Set up working directory
        WORKDIR /project_src
        
        # Pre-create uv virtual environment and install dependencies
        # Install dependencies first (without the project itself) to maximize layer caching
        # See: https://docs.astral.sh/uv/guides/integration/docker/#caching
        COPY pyproject.toml uv.lock /tmp/deps/
        ENV UV_PROJECT_ENVIRONMENT=/venv
        RUN cd /tmp/deps && \
            uv sync --no-install-project && \
            echo "Python virtual environment created successfully at $UV_PROJECT_ENVIRONMENT"
        
        # Very important on Modal -- without this, there is a crazy bug that means that some files do not show up in snapshots!
        # This is because Modal's snapshotting mechanism does not work correctly with symlinks.
        ENV UV_LINK_MODE=copy
        
        # Copy source code (these won't change during agent work)
        COPY app.py ./
        COPY tests/ ./tests/
        COPY pyproject.toml uv.lock ./
        
        # Install the project itself
        RUN uv sync
        
        # Copy the test runner script last (this changes often during development)
        COPY .devcontainer/run_all_tests.sh /run_all_tests.sh
        RUN chmod +x /run_all_tests.sh
  
      ''',
      'run_all_tests_sh': '''
        #!/bin/bash
        set -euo pipefail
        
        # Create JUnit XML directory
        mkdir -p /test_artifacts/junit
        
        # Set PYTHONPATH to ensure imports work correctly
        export PYTHONPATH=/project_src:${PYTHONPATH:-}
        
        # Activate the virtual environment
        export PATH="/venv/bin:$PATH"
        
        # Run pytest with JUnit XML output and timestamped logging
        echo "Running pytest tests..."
        /timestamp_process_output.pl --logfile /test_artifacts/pytest.log \
            pytest --junitxml=/test_artifacts/junit/pytest.xml -v tests/
        
        # Create final result JSON
        cat > /test_artifacts/final_result.json << 'EOF'
        {
          "success": true,
          "message": "All tests passed successfully"
        }
        EOF
        
        echo "Test run completed successfully!"
  
      ''',
    }),
    'success': True,
    'verification': dict({
      'error_message': None,
      'success': True,
      'test_results': list([
        dict({
          'name': 'tests.test_app::test_add',
          'passed': True,
          'skipped': False,
        }),
        dict({
          'name': 'tests.test_app::test_multiply',
          'passed': True,
          'skipped': False,
        }),
      ]),
    }),
  })
# ---
